# oh-my-field

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  oh-my-field.md  pyproject.toml
.github/codex/prompts/: review.md
.github/workflows/: ci.yml  codex-review.yml  release.yml
docs/: agent-ux.md  ci.md  concepts.md  development.md  install.md  mcp.md  portability.md  quickstart.md  release.md  security.md
docs/architecture/: overview.md
docs/runtime-adapters/: claude-code.md  codex.md  generic.md  hermes.md  odysseus.md  opencode.md  pi.md
docs/use-cases/: computing-resource-workflow.md  local-cli-lifecycle.md
examples/: capability-template.yaml
examples/10min-codex-backtest/: .gitignore  README.md  check.py  curate_package.py  run.sh
examples/10min-codex-backtest/capabilities/portfolio_backtest/: README.md  capability.yaml  harness.yaml  instructions.md
examples/10min-codex-backtest/seed/: gpt55_run.txt  spec.md  validation.txt
examples/10min-codex-backtest/seed/output/: backtest_report.md
examples/10min-codex-backtest/task/: backtest_case.md
examples/10min-happy-path/: .gitignore  README.md  check.py  curate_package.py  run.sh
examples/10min-happy-path/capabilities/csv_normalize/: README.md  capability.yaml  harness.yaml  instructions.md
examples/10min-happy-path/expected/: normalized.json
examples/10min-happy-path/seed/: spec.md  validation.txt
examples/10min-happy-path/task/: messy_orders.csv
examples/computing-resource-workflow/: README.md
examples/computing-resource-workflow/evidence/: local-execution.json
examples/computing-resource-workflow/inputs/: resource-request.yaml
examples/computing-resource-workflow/outputs/: resource-usage-report.md
examples/computing-resource-workflow/workflow/: resource-workflow.yaml
schemas/: capability.schema.json  evidence.schema.json  export_bundle.schema.json  harness.schema.json  target_overlay.schema.json  target_validation.schema.json
scripts/: smoke-default-flow.sh  validate_computing_resource_example.py
src/oh_my_field/: __init__.py  adapters.py  capture.py  cli.py  context.py  contract_rendering.py  dashboard.py  diagnostics.py  eval.py  eval_set.py  eval_support.py  execution.py  export.py  health.py  inspection.py  integrity.py  learn.py  learning_patch.py  models.py  orchestrate.py  portability.py  promote.py  reflect.py  registry.py  replay.py  review.py  rollback.py  storage.py  verify.py
src/oh_my_field/adapters/: __init__.py  agent_import.py
src/oh_my_field/adapters/runtime_export/: __init__.py  base.py  claude_code.py  codex.py  generic.py  hermes.py  odysseus.py  opencode.py  pi.py
src/oh_my_field/adapters/session_log/: __init__.py  claude_code.py  codex.py  events.py  heuristic.py
src/oh_my_field/adapters/skill_install/: __init__.py  base.py  claude_code.py  codex.py  generic.py  hermes.py
src/oh_my_field/application/: record_builder.py
src/oh_my_field/application/capture/: __init__.py  workflow.py
src/oh_my_field/application/conformance/: __init__.py  workflow.py
src/oh_my_field/application/context/: __init__.py  workflow.py
src/oh_my_field/cli/: __init__.py  app.py  errors.py  options.py  output.py
src/oh_my_field/cli/commands/: learn.py  (+25 more)
src/oh_my_field/domain/: base.py  layout.py  models.py
src/oh_my_field/mcp/: __init__.py  schemas.py  server.py  tools.py
src/oh_my_field/resources/: __init__.py
src/omf/: cli.py  models.py  storage.py
tests/: test_adapters_cli.py  test_capture_cli.py  test_cli.py  test_cli_lifecycle.py  test_codex_backtest_example.py  test_context_cli.py  test_dashboard.py  test_dataset_export_cli.py  test_diagnostics_cli.py  test_diff_cli.py  test_docs_computing_resource_use_case.py  test_eval_cli.py  test_example_integrity.py  test_execution.py  test_explain_cli.py  test_health_cli.py  test_init_cli.py  test_inspect_export_rollback_cli.py  test_install_cli.py  test_learn_cli.py  test_mcp.py  test_models.py  test_orchestrate_cli.py  test_portability_cli.py  test_portability_lifecycle.py  test_promote_cli.py  test_quickstart_cli.py  test_record_builder.py  test_record_contract_models.py  test_redaction.py  test_reflect_cli.py  test_registry_cli.py  test_replay_cli.py  test_review_cli.py  test_roundtrip_cli.py  test_runtime_adapter.py  test_runtime_conformance_cli.py  test_runtimes_workflow.py  test_schema_contracts.py  test_session_cli.py  (+4 more)
tests/fixtures/: output.txt  prompt.md
typings/langgraph/graph/: __init__.pyi  state.pyi
typings/yaml/: __init__.pyi
(+109 files in other folders)
