[project]
name = "oh-my-field"
version = "0.3.2"
description = "Evidence-backed capability packaging layer for cross-runtime agents."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Baekpica", email = "seanbb93@gmail.com" },
]
keywords = [
    "agent",
    "capability",
    "codex",
    "evaluation",
    "llm",
    "workflow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "langgraph",
    "pydantic",
    "pyyaml",
    "typer",
]

[project.optional-dependencies]
# The local web UI (`omf web` / `omf dashboard`) is built on the Python
# standard library, so it works in a plain install with no extra packages.
# This marker extra exists so `pipx install oh-my-field[web]` is a valid,
# documented entry point and a future home for any optional web dependency.
web = []

[project.urls]
Documentation = "https://github.com/Baekpica/oh-my-field#readme"
Homepage = "https://oh-my-field.dev/"
Issues = "https://github.com/Baekpica/oh-my-field/issues"
Repository = "https://github.com/Baekpica/oh-my-field"

[project.scripts]
omf = "oh_my_field.cli:app"

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "pytest-cov>=7.1.0",
    "ruff",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oh_my_field"]
artifacts = [
    "src/oh_my_field/resources/skills/**/*",
    "src/oh_my_field/resources/mcp/**/*",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
pythonPlatform = "All"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
stubPath = "typings"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportUnknownMemberType = "error"
reportUnknownParameterType = "error"
reportUnknownVariableType = "error"
reportUnusedVariable = "error"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]
# Generated/vendored example artifacts (promoted capability packages) are not
# hand-written source and should not be linted.
extend-exclude = ["examples/*/capabilities"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "CPY001",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D203",
    "D213",
    "FBT001",
    "FBT002",
    "FIX002",
    "ISC001",
    "TD002",
    "TD003",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",
    "D",
    "PLR2004",
    "S101",
    "SLF001",
]
"src/oh_my_field/cli/commands/*.py" = ["PLR0913"]
"examples/**/*.py" = [
    "C901",
    "D",
    "PLR0911",
    "PLR2004",
    "T201",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]
